# etl_AI_pipeline

./: .env.example  .gitignore  README.md  docsFastAPI.md  pyproject.toml  requirements.txt  weatherAPI.md
etl_ai_pipeline/: __init__.py  authorization.py  main.py  settings.py
etl_ai_pipeline/agent/agent_workflow/: stock_analysis_agent.py
etl_ai_pipeline/agent/data_retrieval_workflow/: data_retrieval_graph.py
etl_ai_pipeline/agent/models/: __init__.py  models.py
etl_ai_pipeline/agent/workflow/: graph.py
etl_ai_pipeline/api/dependencies/: auth.py
etl_ai_pipeline/api/models/: models.py  responses.py
etl_ai_pipeline/api/routes/: analysis.py  health.py  stock_data.py
etl_ai_pipeline/db/: Stock_data_manager.py  Supabase_db_manager.py  analysis_queries.py
etl_ai_pipeline/db/models/: __init__.py  models.py
etl_ai_pipeline/db/scripts/: init_sqlite.py
etl_ai_pipeline/services/: email_service.py  polygon_service.py
etl_ai_pipeline/services/models/: __init__.py  models.py
